# app-creator

include/cpl/: core.h  gtk_window.h  widget.h  window.h
include/cpl/utils/: error.h  vector.h
include/cpl/widgets/: button.h
src/: CMakeLists.txt
src/cpl/: core.c  gtk_window.c  main.c  widget.c
src/cpl/utils/: error.c  vector.c
src/cpl/widgets/: button.c
